--- a/css/style.css
+++ b/css/style.css
@@ -1,22 +1,81 @@
-     html {
-         background-image: url("../images/stock-market-tickers-digital-data-display-background_n1yzlgj4x__F0000.png");
+     .content {
+         background-image: url("../images/ticker-image-blue.jpg");
+         width: 100%;
+         height: 40%;
+     }
+
+     .jumbotron {
+         background: rgba(0, 0, 0, 0.4);
+         /* background: black; */
+         color: white;
+         font-weight: bolder;
+         margin: 20px 20% 20px 20%;
+     }
+
+     .navbar-header,
+     #countryDrop {
+         color: white;
      }
 
      body {
          padding-top: 50px;
+         height: 100%;
+         margin-bottom: 40px;
+     }
+
+     #watchStock {
+         margin-top: 25px;
      }
 
      #listItemHolder {
-       background-color: #eeeeee;
-       padding: 12px;
-       position: relative;
-       top: 1px;
-       border: 2px double gray;
+         background-color: #eeeeee;
+         padding: 12px;
+         position: relative;
+         top: 1px;
+         border: 2px double gray;
+         visibility: hidden;
      }
 
-     #logo {
-         height: 19px;
-         width: 23;
+#loggedInUser
+{
+    margin-left: 3px;
+    margin-top: 3px;
+    color: white;
+    background: transparent;
+    visibility: hidden;
+    float: right;
+}
+#logout,
+#loggedIn,
+.logoutList{
+
+    background: white;
+}
+
+p {
+    color: white;
+}
+
+     .hideWell {
+         background: white;
+         visibility: hidden;
+     }
+
+     input {
+         align-content: center;
+     }
+
+     .modal-footer {
+         text-align: center;
+     }
+
+     div.checkbox-control-group {
+         margin-left: 20px;
+     }
+
+     .logo {
+         height: 28px;
+         width: 55px;
      }
 
      .starter-template {
@@ -27,6 +86,20 @@
      .col-centered {
          float: none;
          margin: 0 auto;
+     }
+
+     #theadRow {
+         background-color: #2a52be;
+         color: white;
+     }
+
+     h4 {
+         text-overflow: ellipsis;
+         overflow: hidden;
+         position: relative;
+         line-height: 1.4em;
+         height: 3em;
+
      }
 
      .carousel-control {
@@ -43,7 +116,7 @@
      }
 
      .carousel-control>a>span {
-         color: white;
+         color: black;
          font-size: 29px !important;
      }
 
@@ -60,6 +133,22 @@
 
      .active>div:first-child {
          display: block;
+     }
+
+     #modalError {
+       background-color: inherit;
+       color: red;
+     }
+
+     #modalRegisterError {
+       background-color: inherit;
+       color: red;
+
+     }
+
+     #loading-spinner {
+       position: relative;
+       right: -275px;
      }
      /*xs*/
 
@@ -160,14 +249,46 @@
      }
 
      .block {
-         width: 306px;
-         height: 230px;
+         width: 400px;
+         height: 280px;
+         background: white;
      }
 
-     .block {
-         background: gray;
+     .img1 {
+         width: 78%;
+         height: 80%;
+         display: block;
+         margin: auto;
+     }
+
+     .img2 {
+         width: 78%;
+         height: 80%;
+         display: block;
+         margin: auto;
+     }
+
+     .img3 {
+         width: 78%;
+         height: 80%;
+         display: block;
+         margin: auto;
+     }
+
+     .img4 {
+         width: 78%;
+         height: 80%;
+         display: block;
+         margin: auto;
      }
 
      .carousel {
          text-align: center;
      }
+
+        .srcnews1,
+        .srcnews2,
+        .srcnews3,
+        .srcnews4 {
+        text-transform: uppercase;
+}
